--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Keep Codespace Alive
 
 on:
   schedule:
-    - cron: "*/5 * * * *"  # setiap 5 menit
+    - cron: "* * * * *"  # setiap 5 menit
   workflow_dispatch:
 
 jobs:
