--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,16 @@
 name: Keep Codespace Alive
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "* * * * *"  # backup trigger tiap 15 menit
+    - cron: "*/1 * * * *" # setiap 1 menit
+  workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ github.token }}   # kasih token ke gh CLI
     steps:
       - name: Ping Codespace KeepAlive
         run: |
           curl -sSf https://glorious-space-pancake-r4vxqxp6p69x25j4v-8080.app.github.dev/ || true
-
-      - name: Trigger ulang workflow
-        run: |
-          gh workflow run "Keep Codespace Alive"
